add items to brands section

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <header class="header">
-    <div class="company-logo"><a href="#introSection"><img class="company-logo-img" src="./images/dest/logo.svg" alt="Logo"></a></div>
+    <div class="company-logo"><a href="#introSection"><img class="company-logo-img" src="./images/dest/logo.svg"
+                                                           alt="Logo"></a></div>
     <nav class="header-nav">
         <ul class="header-nav-list">
             <li class="header-nav-list-item"><a href="#aboutSection" class="header-nav-list-link">Главная</a></li>
@@ -54,14 +55,26 @@
         </div>
         <div class="products-content grid">
             <div class="products-content-categories">
-                <button class="products-content-categories-button is-active" data-tab-name="cat-tab-1">Злаки, бобы, орехи</button>
-                <button class="products-content-categories-button" data-tab-name="cat-tab-2">Натуральные сладости и пасты</button>
-                <button class="products-content-categories-button" data-tab-name="cat-tab-3">Продукты из сои, масла и специи</button>
-                <button class="products-content-categories-button" data-tab-name="cat-tab-4">Безалкогольные напитки</button>
-                <button class="products-content-categories-button" data-tab-name="cat-tab-5">Натуральные средства гигиены</button>
-                <button class="products-content-categories-button" data-tab-name="cat-tab-6">Натуральная косметика</button>
-                <button class="products-content-categories-button" data-tab-name="cat-tab-7">Эко средства для дома</button>
-                <button class="products-content-categories-button" data-tab-name="cat-tab-8">Аюрведа и благовония</button>
+                <button class="products-content-categories-button is-active" data-tab-name="cat-tab-1">Злаки, бобы,
+                    орехи
+                </button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-2">Натуральные сладости и
+                    пасты
+                </button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-3">Продукты из сои, масла и
+                    специи
+                </button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-4">Безалкогольные напитки
+                </button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-5">Натуральные средства
+                    гигиены
+                </button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-6">Натуральная косметика
+                </button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-7">Эко средства для дома
+                </button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-8">Аюрведа и благовония
+                </button>
             </div>
             <div class="products-content-list cat-tab is-active cat-tab-1">
                 <div class="products-content-list-item">
@@ -105,7 +118,257 @@
                     <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
                     </div>
                     <div class="products-content-list-item-label">
-                        <p>2 -></p>
+                        <p>Сладости, батончики, шоколад</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Торты на заказ</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Мороженое на растительном молоке</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Арахисовая паста, урбеч</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Натуральный мёд</p>
+                    </div>
+                </div>
+            </div>
+            <div class="products-content-list cat-tab cat-tab-3">
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Соевые продукты, пророщенные зёрна </p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Веганская колбаса, сосиски</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Суперфуды</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Растительные (пищевые) масла холодного отжима</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Специи из Азии</p>
+                    </div>
+                </div>
+            </div>
+            <div class="products-content-list cat-tab cat-tab-4">
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Различные виды орехового молока</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Чай, чайные напитки</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Кофе</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Кисели, талканы</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Натуральные минеральные воды</p>
+                    </div>
+                </div>
+            </div>
+            <div class="products-content-list cat-tab cat-tab-5">
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Натуральные шампуни, гели, тоник-кондиционер для волос</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Натуральное мыло</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Средства для ухода за полостью рта, зубные щётки</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Натуральные дезодоранты</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Натуральные гели для душа</p>
+                    </div>
+                </div>
+            </div>
+            <div class="products-content-list cat-tab cat-tab-6">
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Средства для ухода за волосами</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Кремы для рук</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Бальзамы для губ</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Хна для мехенди</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Косметика для тела</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Косметика для лица</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Масла</p>
+                    </div>
+                </div>
+            </div>
+            <div class="products-content-list cat-tab cat-tab-7">
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Эко стиральные порошки и кондиционеры</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Эко средства для мытья посуды</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Эко средства для уборки дома</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Сменные кассеты для фильтра</p>
+                    </div>
+                </div>
+            </div>
+            <div class="products-content-list cat-tab cat-tab-8">
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Аюрведические препараты</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Натуральные благовония на древесной основе</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Натуральные благовония конусы</p>
+                    </div>
+                </div>
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>Благовония на угольной основе</p>
                     </div>
                 </div>
             </div>
