add media queries and change font properties to em

--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,14 @@
 </header>
 <main>
     <section id="introSection" class="intro parallax grid section">
-        <div class="intro-content">
+        <div class="intro-content grid">
             <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logo.svg" alt="LogoSG"></div>
-            <h1 class="intro-title">Здоровое питание - это легко</h1>
-            <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей
-                двери</p>
-            <a href="#aboutSection" class="intro-button button">Погнали!</a>
+            <div class="intro-vertical">
+                <h1 class="intro-title">Здоровое питание - это легко</h1>
+                <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей
+                    двери</p>
+                <a href="#aboutSection" class="intro-button button">Погнали!</a>
+            </div>
         </div>
     </section>
     <section id="aboutSection" class="about grid section">
@@ -391,7 +393,7 @@
 
     <section class="way section">
         <h2 class="way-title section-title">Лучше для тебя и для планеты</h2>
-        <div class="way-container container grid">
+        <div class="way-container grid">
             <div class="way-item grid">
                 <div class="way-item-img" style="background-image: url('./images/dest/way1.jpg')"></div>
                 <p class="way-item-caption">Проверенные источники натуральных товаров</p>
@@ -439,7 +441,7 @@
     </section>
 </main>
 <footer class="footer">
-    <div class="footer-container container flex">
+    <div class="footer-container flex">
         <div class="company-logo"><img class="company-logo-img" src="./images/dest/logo.svg" alt="LogoSG"></div>
         <div class="social-links">
             <ul class="social-links-list">
