add fixed instagram button

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <title>Simple Green Store</title>
 </head>
 <body>
+<a href="#" class="side-button"><i class="fab fa-instagram"></i></a>
 <header class="header">
     <div class="company-logo"><a href="#introSection"><img class="company-logo-img" src="./images/dest/logo.svg"
                                                            alt="Logo"></a></div>
