--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,25 @@
     <title>Simple Green Store</title>
 </head>
 <body>
+<!--Instagram fixed button-->
 <a href="#" class="side-button"><i class="fab fa-instagram"></i></a>
+<!--Modal Window-->
+<div class="modal hidden">
+    <button class="close-modal">&times;</button>
+    <h1>I'm a modal window 😍</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+    </p>
+</div>
+<div class="overlay hidden"></div>
+<!--END Modal Window-->
+<!--Header-->
 <header class="header">
     <div class="company-logo"><a href="#introSection"><img class="company-logo-img" src="./images/dest/logo.svg"
                                                            alt="Logo"></a></div>
@@ -22,7 +40,9 @@
     </nav>
     <a href="#" class="header-delivery delivery-button button">Заказать доставку</a>
 </header>
+<!--Main-->
 <main>
+<!--    Intro Section-->
     <section id="introSection" class="intro parallax grid section">
         <div class="intro-content grid">
             <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logo.svg" alt="LogoSG"></div>
@@ -34,6 +54,7 @@
             </div>
         </div>
     </section>
+<!--    About Section-->
     <section id="aboutSection" class="about grid section">
         <div class="about-image"><img src="./images/dest/about3.jpg" alt="Team"></div>
         <div class="about-content">
@@ -50,6 +71,7 @@
             <p class="about-text">С Simple Green это становится проще!</p>
         </div>
     </section>
+<!--    Products Section-->
     <section id="productsSection" class="products grid section">
         <div class="products-text">
             <h2 class="products-title section-title">На територии здорового питания</h2>
@@ -377,6 +399,7 @@
             </div>
         </div>
     </section>
+<!--    Brands Section-->
     <section id="brandsSection" class="brands grid" style="background-image: url('./images/dest/brands.jpg')">
         <div class="brands-content ">
             <h2 class="brands-title section-title">Мы бережно выбираем продукты для Вас:</h2>
@@ -391,7 +414,7 @@
             </div>
         </div>
     </section>
-
+<!--Way Product Section-->
     <section class="way section">
         <h2 class="way-title section-title">Лучше для тебя и для планеты</h2>
         <div class="way-container grid">
@@ -414,8 +437,7 @@
             <div class="way-separator"></div>
         </div>
     </section>
-
-
+<!--Store Map Section-->
     <section id="storesSection" class="stores">
         <div class="stores-container grid">
             <div class="stores-text">
@@ -432,13 +454,15 @@
                 </ul>
             </div>
             <div class="stores-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua"
-                        width="100%" height="510" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
+<!--                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua"-->
+<!--                        width="100%" height="510" frameborder="0" style="border:0;" allowfullscreen=""-->
+<!--                        aria-hidden="false" tabindex="0"></iframe>-->
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A40a0b738826a115d3ee595efdb9c84cd77b9c9b367dc222ad253978fc51db186&amp;source=constructor" width="100%" height="450" frameborder="0"></iframe>
             </div>
         </div>
     </section>
 </main>
+<!--Footer-->
 <footer class="footer">
     <div class="footer-container flex">
         <div class="company-logo"><img class="company-logo-img" src="./images/dest/logo.svg" alt="LogoSG"></div>
