--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -14,16 +14,31 @@
 <!--Modal Window-->
 <div class="modal hidden">
     <button class="close-modal">&times;</button>
-    <h1>I'm a modal window 😍</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+    <h2>Возможные способы доставки:</h2>
+    <ol>
+        <li>Самовывоз в г. Минске - ЖК Маяк Мстиславца 8 -377</li>
+        <li>Доставка курьером по г. Минску - 5 руб. по будням и 7 руб. по выходным дням. При заказе от 50 руб - <strong>БЕСПЛАТНО</strong></li>
+        <li>Отправка заказов почтой по РБ - от 4,5 руб.</li>
+        <li>Отправка заказов экспресс-почтой по РБ - 7,60 руб.</li>
+        <li>Отправка заказов компанией "Европочта" по РБ - от 1,92 до отделения, от 6.60 руб. до двери.</li>
+    </ol>
+
+    <p>Возможна отправка заказов в СНГ (стоимость рассчитывается индивидуально).</p>
+
+    <h4>Прочие условия:</h4>
+    <p> При наличии товара в магазине доставка возможна в этот же день до 21.00.
+        При заказе после 17.00 доставка может осуществляться на следующий день с 10.00 до 21.00.
+        Важно: оформляя заказ оговаривайте заранее с менеджером все интересующие Вас вопросы: курьер – это человек,
+        который доставляет товар, он может не знать ответов на Ваши вопросы.
     </p>
+
+    <h4> Способы оплаты:</h4>
+    <ol>
+        <li>Наличными</li>
+        <li>Банковской картой online</li>
+        <li>ЕРИП (только после звонка менеджера и подтверждения заказа!)</li>
+    </ol>
+    <p>Доставка осуществляется только по предоплате.</p>
 </div>
 <div class="overlay hidden"></div>
 <!--END Modal Window-->
@@ -42,7 +57,7 @@
 </header>
 <!--Main-->
 <main>
-<!--    Intro Section-->
+    <!--    Intro Section-->
     <section id="introSection" class="intro parallax grid section">
         <div class="intro-content grid">
             <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logo.svg" alt="LogoSG"></div>
@@ -54,7 +69,7 @@
             </div>
         </div>
     </section>
-<!--    About Section-->
+    <!--    About Section-->
     <section id="aboutSection" class="about grid section">
         <div class="about-image"><img src="./images/dest/about3.jpg" alt="Team"></div>
         <div class="about-content">
@@ -71,7 +86,7 @@
             <p class="about-text">С Simple Green это становится проще!</p>
         </div>
     </section>
-<!--    Products Section-->
+    <!--    Products Section-->
     <section id="productsSection" class="products grid section">
         <div class="products-text">
             <h2 class="products-title section-title">На територии здорового питания</h2>
@@ -399,7 +414,7 @@
             </div>
         </div>
     </section>
-<!--    Brands Section-->
+    <!--    Brands Section-->
     <section id="brandsSection" class="brands grid" style="background-image: url('./images/dest/brands.jpg')">
         <div class="brands-content ">
             <h2 class="brands-title section-title">Мы бережно выбираем продукты для Вас:</h2>
@@ -414,7 +429,7 @@
             </div>
         </div>
     </section>
-<!--Way Product Section-->
+    <!--Way Product Section-->
     <section class="way section">
         <h2 class="way-title section-title">Лучше для тебя и для планеты</h2>
         <div class="way-container grid">
@@ -437,7 +452,7 @@
             <div class="way-separator"></div>
         </div>
     </section>
-<!--Store Map Section-->
+    <!--Store Map Section-->
     <section id="storesSection" class="stores">
         <div class="stores-container grid">
             <div class="stores-text">
@@ -454,10 +469,11 @@
                 </ul>
             </div>
             <div class="stores-map">
-<!--                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua"-->
-<!--                        width="100%" height="510" frameborder="0" style="border:0;" allowfullscreen=""-->
-<!--                        aria-hidden="false" tabindex="0"></iframe>-->
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A40a0b738826a115d3ee595efdb9c84cd77b9c9b367dc222ad253978fc51db186&amp;source=constructor" width="100%" height="450" frameborder="0"></iframe>
+                <!--                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua"-->
+                <!--                        width="100%" height="510" frameborder="0" style="border:0;" allowfullscreen=""-->
+                <!--                        aria-hidden="false" tabindex="0"></iframe>-->
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A40a0b738826a115d3ee595efdb9c84cd77b9c9b367dc222ad253978fc51db186&amp;source=constructor"
+                        width="100%" height="450" frameborder="0"></iframe>
             </div>
         </div>
     </section>
