add messengers buttons to modal

--- a/app/index.html
+++ b/app/index.html
@@ -13,32 +13,41 @@
 <a href="#" class="side-button"><i class="fab fa-instagram"></i></a>
 <!--Modal Window-->
 <div class="modal hidden">
+    <ul class="modal-social social-links-list">
+        <li class="social-links-list-item"><a href="tel:+375173771377"><i class="fas fa-phone-alt"></i></a></li>
+        <li class="social-links-list-item viber"><a href="#"><i class="fab fa-viber"></i></a></li>
+        <li class="social-links-list-item telegram"><a href="#"><i class="fab fa-telegram"></i></a></li>
+        <li class="social-links-list-item whatsapp"><a href="#"><i class="fab fa-whatsapp-square"></i></a></li>
+    </ul>
     <button class="close-modal">&times;</button>
-    <h2>Возможные способы доставки:</h2>
-    <ol>
-        <li>Самовывоз в г. Минске - ЖК Маяк Мстиславца 8 -377</li>
-        <li>Доставка курьером по г. Минску - 5 руб. по будням и 7 руб. по выходным дням. При заказе от 50 руб - <strong>БЕСПЛАТНО</strong></li>
-        <li>Отправка заказов почтой по РБ - от 4,5 руб.</li>
-        <li>Отправка заказов экспресс-почтой по РБ - 7,60 руб.</li>
-        <li>Отправка заказов компанией "Европочта" по РБ - от 1,92 до отделения, от 6.60 руб. до двери.</li>
-    </ol>
+    <div class="modal-content">
+        <h2>Возможные способы доставки:</h2>
+        <ol>
+            <li>Самовывоз в г. Минске - ЖК Маяк Мстиславца 8 -377</li>
+            <li>Доставка курьером по г. Минску - 5 руб. по будням и 7 руб. по выходным дням. При заказе от 50 руб - <strong>БЕСПЛАТНО</strong></li>
+            <li>Отправка заказов почтой по РБ - от 4,5 руб.</li>
+            <li>Отправка заказов экспресс-почтой по РБ - 7,60 руб.</li>
+            <li>Отправка заказов компанией "Европочта" по РБ - от 1,92 до отделения, от 6.60 руб. до двери.</li>
+        </ol>
 
-    <p>Возможна отправка заказов в СНГ (стоимость рассчитывается индивидуально).</p>
+        <p>Возможна отправка заказов в СНГ (стоимость рассчитывается индивидуально).</p>
 
-    <h4>Прочие условия:</h4>
-    <p> При наличии товара в магазине доставка возможна в этот же день до 21.00.
-        При заказе после 17.00 доставка может осуществляться на следующий день с 10.00 до 21.00.
-        Важно: оформляя заказ оговаривайте заранее с менеджером все интересующие Вас вопросы: курьер – это человек,
-        который доставляет товар, он может не знать ответов на Ваши вопросы.
-    </p>
+        <h4>Прочие условия:</h4>
+        <p> При наличии товара в магазине доставка возможна в этот же день до 21.00.
+            При заказе после 17.00 доставка может осуществляться на следующий день с 10.00 до 21.00.
+            Важно: оформляя заказ оговаривайте заранее с менеджером все интересующие Вас вопросы: курьер – это человек,
+            который доставляет товар, он может не знать ответов на Ваши вопросы.
+        </p>
 
-    <h4> Способы оплаты:</h4>
-    <ol>
-        <li>Наличными</li>
-        <li>Банковской картой online</li>
-        <li>ЕРИП (только после звонка менеджера и подтверждения заказа!)</li>
-    </ol>
-    <p>Доставка осуществляется только по предоплате.</p>
+        <h4> Способы оплаты:</h4>
+        <ol>
+            <li>Наличными</li>
+            <li>Банковской картой online</li>
+            <li>ЕРИП (только после звонка менеджера и подтверждения заказа!)</li>
+        </ol>
+        <p>Доставка осуществляется только по предоплате.</p>
+    </div>
+
 </div>
 <div class="overlay hidden"></div>
 <!--END Modal Window-->
