text and sizing in map section

--- a/app/index.html
+++ b/app/index.html
@@ -459,9 +459,10 @@
         <div class="stores-container grid">
             <div class="stores-text">
                 <h2 class="stores-title section-title">Мы на карте:</h2>
-                <p class="stores-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, beatae
-                    dignissimos distinctio ea enim eveniet expedita harum impedit in, minus molestias, nam nemo
-                    perferendis perspiciatis sed similique vero. Perferendis, possimus?</p>
+                <p class="stores-paragraph">Мы находимся в ЖК «Маяк Минска», это тот что на станции метро «Восток» сразу за «Dana Mall» (всего 400 метров).</p>
+                <p class="stores-paragraph">Так вот, там есть прогулочная аллея, выходите на неё и ныряйте в арку. Нашу вывеску вы уж точно не пропустите.</p>
+                <p class="stores-paragraph">Дом под номером 8 по улице Петра Мстиславца, вход в магазин со двора прямо напротив самой большой детской площадки в Минске.
+                    Увидите нашу вывеску – смело заходите в гости, мы вас ждём!</p>
                 <h4 class="stores-text-sub-title">Адрес:</h4>
                 <p class="stores-location">ЖК Маяк Минска, ул. Петра Мстиславца 8, помещение 377, Минск</p>
                 <h4 class="stores-text-sub-title">Телефоны:</h4>
@@ -471,6 +472,7 @@
                 </ul>
             </div>
             <div class="stores-map">
+<!--                Google maps-->
                 <!--                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua"-->
                 <!--                        width="100%" height="510" frameborder="0" style="border:0;" allowfullscreen=""-->
                 <!--                        aria-hidden="false" tabindex="0"></iframe>-->
