add links for messangers at modal window

--- a/app/index.html
+++ b/app/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 <!--Instagram fixed button-->
-<a href="#" class="side-button"><i class="fab fa-instagram"></i></a>
+<a href="https://www.instagram.com/simplegreen.by/" class="side-button" target="_blank"><i class="fab fa-instagram"></i></a>
 <!--Modal Window-->
 <div class="modal hidden">
     <ul class="modal-social social-links-list">
         <li class="social-links-list-item"><a href="tel:+375173771377"><i class="fas fa-phone-alt"></i></a></li>
-        <li class="social-links-list-item viber"><a href="#"><i class="fab fa-viber"></i></a></li>
-        <li class="social-links-list-item telegram"><a href="#"><i class="fab fa-telegram"></i></a></li>
-        <li class="social-links-list-item whatsapp"><a href="#"><i class="fab fa-whatsapp-square"></i></a></li>
+        <li class="social-links-list-item viber"><a href="viber://chat?number=+375256365217" target="_blank"><i class="fab fa-viber"></i></a></li>
+        <li class="social-links-list-item telegram"><a href="https://telegram.im/@doova_m" target="_blank"><i class="fab fa-telegram"></i></a></li>
+        <li class="social-links-list-item whatsapp"><a href="https://wa.me/375256365217" target="_blank"><i class="fab fa-whatsapp-square"></i></a></li>
     </ul>
     <button class="close-modal">&times;</button>
     <div class="modal-content">
@@ -489,7 +489,7 @@
         <div class="social-links">
             <ul class="social-links-list">
                 <li class="social-links-list-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="social-links-list-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li class="social-links-list-item"><a href="https://www.instagram.com/simplegreen.by/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li class="social-links-list-item"><a href="#"><i class="fab fa-vk"></i></a></li>
             </ul>
         </div>
