--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,13 @@
     <title>Simple Green Store</title>
 </head>
 <body>
+<!--Preloader-->
+<div class="preloader">
+    <div class="preloader__row">
+        <div class="preloader__item"></div>
+        <div class="preloader__item"></div>
+    </div>
+</div>
 <!--Instagram fixed button-->
 <a href="https://www.instagram.com/simplegreen.by/" class="side-button" target="_blank"><i class="fab fa-instagram"></i></a>
 <!--Modal Window-->
