add favicon and remove meta with scale options

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,6 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=320, user-scalable=yes, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
           content="Правильное питание - это просто! В нашем магазине эко-товаров и здоровой пищи Вы найдете лучшие продукты в Минске. Мы продаем только те продукты, которые попробовали сами.">
@@ -11,6 +9,7 @@
           integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/app.min.css">
+    <link rel="icon" type="image/svg+xml" href="./images/dest/favicon.svg">
     <title>SimpleGreen | Лучший магазин эко-товаров, здоровой пищи и правильного питания в Минске.</title>
 </head>
 <body>
