add fix for header size(mobile) and phones + messangers at map section

--- a/app/index.html
+++ b/app/index.html
@@ -520,11 +520,23 @@
                     Увидите нашу вывеску – смело заходите в гости, мы вас ждём!</p>
                 <h4 class="stores-text-sub-title">Адрес:</h4>
                 <p class="stores-location">ЖК Маяк Минска, ул. Петра Мстиславца 8, помещение 377, Минск</p>
+                <h4 class="stores-text-sub-title">Часы работы:</h4>
+                <p>C 10:00 до 21:00</p>
                 <h4 class="stores-text-sub-title">Телефоны:</h4>
-                <ul>
-                    <li><a href="tel:+375173771377" class="stores-text-tel">+375 (17) 377-1-377</a></li>
-                    <li><a href="tel:+375256365217" class="stores-text-tel">+375 (25) 636-5-217</a></li>
-                </ul>
+                <div class="stores-text-container">
+                    <ul>
+                        <li><a href="tel:+375173771377" class="stores-text-tel">+375 (17) 377-1-377</a></li>
+                        <li><a href="tel:+375256365217" class="stores-text-tel">+375 (25) 636-5-217</a></li>
+                    </ul>
+                    <ul class="stores-social social-links-list">
+                        <li class="social-links-list-item viber"><a href="viber://chat?number=+375256365217" target="_blank"><i
+                                class="fab fa-viber"></i></a></li>
+                        <li class="social-links-list-item telegram"><a href="https://telegram.im/@doova_m" target="_blank"><i
+                                class="fab fa-telegram"></i></a></li>
+                        <li class="social-links-list-item whatsapp"><a href="https://wa.me/375256365217" target="_blank"><i
+                                class="fab fa-whatsapp-square"></i></a></li>
+                    </ul>
+                </div>
             </div>
             <div class="stores-map">
                 <!--                Google maps-->
