--- a/app/index.html
+++ b/app/index.html
@@ -555,6 +555,8 @@
     <div class="footer-container flex">
         <div class="company-logo"><img class="company-logo-img" src="./images/dest/logo.svg" alt="Simple Green Логотип">
         </div>
+        <div><a href="mailto:info@simplegreen.by" class="footer-email">info@simplegree.by</a></div>
+
         <div class="social-links">
             <ul class="social-links-list">
                 <li class="social-links-list-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
