--- a/app/index.html
+++ b/app/index.html
@@ -540,12 +540,12 @@
             </div>
             <div class="stores-map">
                 <!--                Google maps-->
-                <!--                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua"-->
-                <!--                        width="100%" height="510" frameborder="0" style="border:0;" allowfullscreen=""-->
+                <!--                <iframe class="stores-map-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua"-->
+                <!--                          allowfullscreen=""-->
                 <!--                        aria-hidden="false" tabindex="0"></iframe>-->
                 <!--                Yandex maps-->
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A40a0b738826a115d3ee595efdb9c84cd77b9c9b367dc222ad253978fc51db186&amp;source=constructor"
-                        width="100%" height="450" frameborder="0"></iframe>
+                <iframe class="stores-map-frame" src="https://yandex.ru/map-widget/v1/?um=constructor%3A40a0b738826a115d3ee595efdb9c84cd77b9c9b367dc222ad253978fc51db186&amp;source=constructor"
+                        ></iframe>
             </div>
         </div>
     </section>
